--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ actix-service = "2.0.2"
 actix-web = "4.3.1"
 bcrypt = "0.15.0"
 chrono = {version = "0.4.26", features = ["serde"]}
-clap = "4.3.19"
+clap = {version = "4.4.3", features = ["derive"]}
 derive_more = "0.99.17"
 dotenv = "0"
 fancy-regex = "0.11.0"
